--- a/Resources/views/Template/_form.html.twig
+++ b/Resources/views/Template/_form.html.twig
@@ -1,10 +1,8 @@
-{% form_theme form 'bootstrap_3_horizontal_layout.html.twig' %}
-
 <div class="portlet light ">
     <div class="portlet-title tabbable-line">
         <div class="caption">
             <i class="icon-globe theme-font hide"></i>
-            <span class="caption-subject font-green-sharp bold uppercase"><i class="fa  fa-book"></i> Datos del Template </span>
+            <span class="caption-subject font-green-sharp bold uppercase"><i class="fa  fa-book"></i> Datos del plantilla </span>
         </div>
         <div class="actions btn-set">
             <a href="{{ path('positibe_template_index') }}"
