--- a/Resources/views/Template/create.html.twig
+++ b/Resources/views/Template/create.html.twig
@@ -1,18 +1,18 @@
     {% extends '@PositibeCmf/layout.html.twig' %}
 
-    {% block title %}Template{% endblock %}
-    {% block subtitle %}Crear nuevo Template{% endblock %}
+    {% block title %}Plantilla{% endblock %}
+    {% block subtitle %}Crear nueva plantilla{% endblock %}
     {% set menu_active = 'template' %}
     {% set content_menu = 'template' %}
 
     {% block breadcrumb_list %}
     <li>
         <i class="fa fa-angle-right"></i>
-        <a href="{{ path('positibe_template_index') }}">Template</a>
+        <a href="{{ path('positibe_template_index') }}">Plantilla</a>
     </li>
     <li>
         <i class="fa fa-angle-right"></i>
-        Nuevo Template
+        Nueva plantilla
     </li>
     {% endblock %}
 
