--- a/Resources/views/Template/show.html.twig
+++ b/Resources/views/Template/show.html.twig
@@ -1,6 +1,6 @@
 {% extends '@PositibeCmf/layout.html.twig' %}
 
-    {% block title %}Template{% endblock %}
+    {% block title %}Plantillas{% endblock %}
     {% block subtitle %}{{ template.code }}{% endblock %}
     {% set menu_active = 'template' %}
     {% set content_menu = 'template' %}
@@ -8,7 +8,7 @@
     {% block breadcrumb_list %}
         <li>
             <i class="fa fa-angle-right"></i>
-            <a href="{{ path('positibe_template_index') }}">Template</a>
+            <a href="{{ path('positibe_template_index') }}">Plantillas</a>
         </li>
         <li>
             <i class="fa fa-angle-right"></i>
@@ -22,7 +22,7 @@
             <div class="portlet-title">
                 <div class="caption">
                     <p class="caption-subject font-green-sharp bold uppercase">
-                        <i class="fa fa-book"></i> Template: {{ template.code }}
+                        <i class="fa fa-book"></i> Plantilla: {{ template.code }}
                     </p>
                 </div>
                 <div class="actions">
