--- a/Resources/views/Template/update.html.twig
+++ b/Resources/views/Template/update.html.twig
@@ -2,15 +2,15 @@
 
     {% from '@PositibeCmf/_macros.html.twig' import delete_confirm %}
 
-    {% block title %}Template{% endblock %}
-    {% block subtitle %}Editar Template{% endblock %}
+    {% block title %}Plantillas{% endblock %}
+    {% block subtitle %}Editar plantilla{% endblock %}
     {% set menu_active = 'template' %}
     {% set content_menu = 'template' %}
 
     {% block breadcrumb_list %}
     <li>
         <i class="fa fa-angle-right"></i>
-        <a href="{{ path('positibe_template_index') }}">Template</a>
+        <a href="{{ path('positibe_template_index') }}">Plantillas</a>
     </li>
     <li>
         <i class="fa fa-angle-right"></i>
