--- a/Resources/views/Mail/create.html.twig
+++ b/Resources/views/Mail/create.html.twig
@@ -1,25 +1,8 @@
-    {% extends '@PositibeCmf/layout.html.twig' %}
+{% set extends = 'admin.html.twig' %}
+{% set icon = 'fa fa-envelope' %}
 
-    {% block title %}{{ 'mail.create.page_title' | trans }}{% endblock %}
-    {% block subtitle %}{{ 'mail.create.page_subtitle' | trans }}{% endblock %}
-    {% set menu_active = 'mail' %}
-    {% set content_menu = 'mail' %}
-
-    {% block breadcrumb_list %}
-    <li>
-        <i class="fa fa-angle-right"></i>
-        <a href="{{ path('positibe_mail_index') }}">{{ 'mail.breadcrumbs.index' | trans }}</a>
-    </li>
-    <li>
-        <i class="fa fa-angle-right"></i>
-        {{ 'mail.breadcrumbs.create' | trans }}
-    </li>
+{% embed '@PositibeCore/Grid/create.html.twig' %}
+    {% block content_form %}
+        {{ form_widget(form) }}
     {% endblock %}
-
-    {% block content -%}
-
-    {{ form_start(form,{'attr': {'class': 'form-horizontal inbox-compose' }}) }}
-    {{ include('PositibeMailingBundle:Mail:_form.html.twig') }}
-    {{ form_end(form) }}
-
-    {% endblock -%}
+{% endembed %}
