--- a/Resources/views/Template/_form.html.twig
+++ b/Resources/views/Template/_form.html.twig
@@ -1,58 +1,12 @@
-<div class="portlet light ">
-    <div class="portlet-title tabbable-line">
-        <div class="caption">
-            <i class="icon-globe theme-font hide"></i>
-            <span class="caption-subject font-green-sharp bold uppercase"><i class="fa  fa-book"></i> Datos del plantilla </span>
-        </div>
-        <div class="actions btn-set">
-            <a href="{{ path('positibe_template_index') }}"
-               name="back" class="btn btn-default btn-circle"><i class="fa fa-angle-left"></i> Atras</a>
-            <a href="{{ app.request.server.get('REQUEST_URI') }}" class="btn btn-default btn-circle "><i
-                        class="fa fa-reply"></i> Resetear</a>
-            <button class="btn green-haze btn-circle" type="submit"><i class="fa fa-check"></i> Guardar</button>
-            {% if template.deleteable %}
-                {% if template is defined and template.id is not null %}
-                    <a class="btn red-haze btn-circle" data-toggle="modal" href="#positibe_template_remove">
-                        <i class="fa fa-trash"></i> Remover
-                    </a>
-                {% endif %}
-            {% endif %}
-        </div>
-
-    </div>
-    <div class="portlet-body">
-        <div class="tabbable">
-
-            <ul class="nav nav-tabs">
-                <li class="active">
-                    <a href="#form_congress_tab_basic" data-toggle="tab" aria-expanded="true">Información básica</a>
-                </li>
-                <li class="">
-                    <a href="#form_congress_tab_configuration" data-toggle="tab" aria-expanded="true">Configuración</a>
-                </li>
-            </ul>
-            <div class="tab-content">
-
-                <div class="tab-pane active" id="form_congress_tab_basic">
-                    {% if form.code is not null %}
-                        {{ form_row(form.code) }}
-                    {% endif %}
-                    {{ form_row(form.subject) }}
-                    {{ form_widget(form.body) }}
-                </div>
-                <div class="tab-pane " id="form_congress_tab_configuration">
-                    {{ form_row(form.description) }}
-                    {{ form_row(form.image) }}
-                    {% if form.deleteable is not null %}
-                        {{ form_row(form.deleteable) }}
-                    {% endif %}
-                </div>
-            </div>
-        </div>
-        <div class="form-actions text-right">
-            <hr>
-            <a href="{{ path('positibe_template_index') }}" class="btn btn-default">Cancelar</a>
-            <button class="btn btn-primary"><i class="fa fa-check"></i> Guardar</button>
-        </div>
-    </div>
-</div>
+{% form_theme form.subject '@PositibeCore/FormThemes/mdb_form_theme_md.html.twig' %}
+{% if form.code is not null %}
+    {% form_theme form.code '@PositibeCore/FormThemes/mdb_form_theme_md.html.twig' %}
+    {{ form_row(form.code) }}
+{% endif %}
+{{ form_row(form.subject) }}
+{{ form_widget(form.body) }}
+{{ form_row(form.description) }}
+{{ form_row(form.image) }}
+{% if form.deleteable is not null %}
+    {{ form_row(form.deleteable) }}
+{% endif %}
